# xmlsql-wasm

./: .gitignore  Cargo.toml  README.md  build_and_run.sh
examples/: blog.html  books.xml  xmlsql-2026-02-01.db
src/: lib.rs  parser.rs  selector.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx
web/src/components/: DocumentList.tsx  FileUploader.tsx  QueryEditor.tsx  ResultsViewer.tsx
web/src/types/: index.ts
