[package]
name = "xmlsql-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
sqlite-wasm-rs = { git = "https://github.com/Spxg/sqlite-wasm-rs", version = "0.5.2" }
rsqlite-vfs = { git = "https://github.com/Spxg/sqlite-wasm-rs", version = "0.1.0" }
getrandom = { version = "0.3", features = ["wasm_js"] }
roxmltree = "0.19"
scraper = "0.18"
thiserror = "1.0"
js-sys = "0.3"
wee_alloc = "0.4"
ego-tree = "0.6"


[dependencies.web-sys]
version = "0.3"
features = ["console", "File", "FileReader", "Blob"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
